add_subdirectory("Chapter 01 Hello Window")
add_subdirectory("Chapter 02 Hello Triangle")
add_subdirectory("Chapter 03 Shaders")
add_subdirectory("Chapter 04 Textures")
add_subdirectory("Chapter 05 Transformations")
add_subdirectory("Chapter 06 Coordinate Systems")
add_subdirectory("Chapter 07 Camera")
